# grpc-asyncio-example

./: .gitignore  .pre-commit-config.yaml  gen_rpc.sh  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: script
benchmarks/result/: asyncio_example_server.txt  asyncio_example_server_uvloop.txt  betterproto_example_server.txt  betterproto_example_server_uvloop.txt  sync_example_server.txt  sync_example_server_gevent.txt
grpc_asyncio_example/asyncio_example/: __main__.py  api_server_example.py  client.py  server.py  server_uvloop.py
grpc_asyncio_example/betterproto_example/: __main__.py  client.py  server.py  server_uvloop.py
grpc_asyncio_example/protos/: helloworld_pb2.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py  helloworld_pb2_grpc.pyi
grpc_asyncio_example/protos/helloworld/: __init__.py
grpc_asyncio_example/sync_example/: __main__.py  client.py  server.py  server_gevent.py
protos/grpc_asyncio_example/protos/: helloworld.proto
